--- a/adnan.html
+++ b/adnan.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Will you go out with me?</h2>
-        <img class="gif" alt="gif" src="https://media.tenor.com/otkDWfPTroQAAAAC/hello-kitty-kiss.gif>
+        <h2 class="question">Will you be my girlfriend?</h2>
+        <img class="gif" alt="gif" src="hello-kitty-kiss.gif>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
             <button class="no-btn">No</button>
@@ -31,7 +31,7 @@ const noBtn = document.querySelector(".no-btn");
 yesBtn.addEventListener("click", () => {
   question.innerHTML = "Yay, see you on the 18th!";
   gif.src =
-    "https://media.tenor.com/otkDWfPTroQAAAAC/hello-kitty-kiss.gif";
+    "hello-kitty-kiss.gif";
 });
 
 noBtn.addEventListener("mouseover", () => {
