--- a/adnan.html
+++ b/adnan.html
@@ -16,32 +16,7 @@
             <button class="no-btn">No</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="SCRIPT.JS"></script>
 </body>
 </html>
- 23 changes: 23 additions & 0 deletions23  
-script.js
-@@ -0,0 +1,23 @@
-const wrapper = document.querySelector(".wrapper");
-const question = document.querySelector(".question");
-const gif = document.querySelector(".gif");
-const yesBtn = document.querySelector(".yes-btn");
-const noBtn = document.querySelector(".no-btn");
-
-yesBtn.addEventListener("click", () => {
-  question.innerHTML = "Yay, see you on the 18th!";
-  gif.src =
-    "hello-kitty-kiss.gif";
-});
-
-noBtn.addEventListener("mouseover", () => {
-  const noBtnRect = noBtn.getBoundingClientRect();
-  const maxX = window.innerWidth - noBtnRect.width;
-  const maxY = window.innerHeight - noBtnRect.height;
-
-  const randomX = Math.floor(Math.random() * maxX);
-  const randomY = Math.floor(Math.random() * maxY);
-
-  noBtn.style.left = randomX + "px";
-  noBtn.style.top = randomY + "px";
-});
+ 
