--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h2 class="question">Will you be my girlfriend?</h2>
-        <img class="gif" alt="gif" src="hello-kitty-kiss.gif>
+        <img class="gif" alt="gif" src="hello-kitty-kiss.gif">
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
             <button class="no-btn">No</button>
